--- a/03_Tutorial.ipynb
+++ b/03_Tutorial.ipynb
@@ -518,10 +518,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0bef0783-6226-4689-99f9-f84d717a6d19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "not True"
    ]
@@ -945,7 +956,7 @@
     "# 3 represents ski resort is open\n",
     "# 2 represents ski resort opens soon\n",
     "# 1 represents ski resort closes soon\n",
-    "# 0 represents ski resort is open\n",
+    "# 0 represents ski resort is closed\n",
     "ski_resort = 2\n",
     "\n",
     "if ski_resort > 2:\n",
