--- a/03_Tutorial.ipynb
+++ b/03_Tutorial.ipynb
@@ -952,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ski resort is represented by two possible values:\n",
+    "# Ski resort is represented by four possible values:\n",
     "# 3 represents ski resort is open\n",
     "# 2 represents ski resort opens soon\n",
     "# 1 represents ski resort closes soon\n",
@@ -999,7 +999,7 @@
     "\n",
     "* `initializer`: executed only one time before beginning the loop; e.g., `i = 0`.\n",
     "* `condition`: determines if the next iteration of the loop should be executed; must always be a boolean expression; e.g., `i < 2001`.\n",
-    "* `iterator`: determines what happens after the successful completion of each loop; e.g., `i+=1` or `i = i + 1`.\n",
+    "* `iterator`: determines what happens after the successful completion of each loop; e.g., `i += 1` or `i = i + 1`.\n",
     "\n",
     "The `while` statement executes one or more statements so long as a boolean expression is `True`. Once the boolean expression evaluates to `False`, the loop stops executing.\n",
     "\n",
